--- a/style.css
+++ b/style.css
@@ -13,3 +13,12 @@
 .active-key-press {
   stroke: red;
 }
+
+
+.button {
+  border: 1px solid black;
+  background-color: green;
+}
+.hidden {
+  display: none;
+}
