Some minor style changes and a couple more refactor misses. Also removing highlight of track after swapping out a track

--- a/style.css
+++ b/style.css
@@ -1,15 +1,21 @@
+.row-id {
+  font-size: 11;
+  fill: rgba(82, 82, 165, 1);
+}
 .active-sample rect {
   fill: rgba(125, 207, 125, 0.40);
 }
 .active-sample text {
   fill: rgba(12, 12, 54, 1);
 }
+
 .waiting-sample rect {
   fill: rgba(192, 187, 204, 1);
 }
 .waiting-sample text {
   fill: rgba(43, 36, 63, 1);
 }
+
 .active-key-press {
   stroke: red;
 }
@@ -30,6 +36,16 @@ canvas {
 
 #preview-wrapper {
   position:relative;
+}
+
+.board-button {
+  fill: rgb(179, 171, 153);
+  stroke: rgb(129, 114, 79);
+}
+
+.board-button.pressed {
+  fill: rgb(255, 184, 0);
+  stroke: rgb(145, 112, 27);
 }
 
 .button {
