--- a/style.css
+++ b/style.css
@@ -5,12 +5,18 @@
 .active-sample rect {
   fill: rgba(125, 207, 125, 0.40);
 }
+.active-sample .sample-background {
+  fill: rgba(125, 207, 125, 0.34);
+}
 .active-sample text {
   fill: rgba(12, 12, 54, 1);
 }
 
 .waiting-sample rect {
   fill: rgba(192, 187, 204, 1);
+}
+.waiting-sample .sample-background {
+  fill: rgba(192, 187, 204, 0.46);
 }
 .waiting-sample text {
   fill: rgba(43, 36, 63, 1);
