--- a/style.css
+++ b/style.css
@@ -61,3 +61,30 @@ canvas {
 .hidden {
   display: none;
 }
+
+#holder.hover { border: 10px dashed #0c0 !important; }
+
+.droptarget {
+  background-color: white;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  z-index: 1;
+}
+
+.droptarget.active {
+  z-index: 5;
+  background-color: gray;
+}
+
+.dragging {
+    background-color: gray;
+    transition: background-color 0.5s ease-in-out;
+}
+
+body {
+    background-color: white;
+    transition: background-color 0.5s ease-in-out;
+}
