--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+text {
+  font-family: Arial, Helvetica, sans-serif;
+}
 .row-id {
   font-size: 11;
   fill: rgba(82, 82, 165, 1);
@@ -56,9 +59,72 @@ canvas {
 }
 
 .button {
-  border: 1px solid black;
-  background-color: green;
+  border: 1px solid rgb(11, 108, 146);
+  background-color: rgb(255, 255, 255);
 }
 .hidden {
   display: none;
 }
+
+
+.rdio {
+  font-family: Arial, Helvetica, sans-serif;
+  display: none;
+  width: 200px;
+  height: 16px;
+  position: absolute;
+  bottom: 0px;
+  right: 0px;
+  border: 1px solid rgb(11, 108, 146);
+  background: rgba(0, 163, 255, 0.2);
+  overflow: hidden;
+  color: rgb(11, 108, 146);
+
+}
+.rdio.expanded {
+  height: 200px;
+}
+.track-id {
+  width: 100%;
+}
+.search-result-container {
+  overflow: scroll;
+  height: 14  0px;
+}
+.search-results {
+  font-size: 10px;
+}
+.search-results .button {
+  width: initial;
+  display: inline-block;
+  border-radius: 6px;
+  padding: 0px 5px;
+}
+.search-results img{
+  width: 75px;
+  float: left;
+}
+.search-results .entry {
+  clear: both;
+}
+.rdio .expander::before {
+  content: "^";
+  font-size: 10px;
+  border:1px solid rgb(11, 108, 146);
+  background-color: rgb(11, 108, 146);
+  color: white;
+  float: right;
+  line-height: 14px;
+  width: 10px;
+  text-align: center;
+}
+.rdio .expander.expanded::before {
+  content: "v";
+}
+.rdio .logo {
+  height: 16px;
+  line-height: 14px;
+  vertical-align: middle;
+  float: right;
+}
+
